# trivium

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  flags.rs  ioc.rs  main.rs  models.rs  project_io.rs  search.rs  state.rs  storage.rs  value_utils.rs
src-tauri/src/commands/: export.rs  flags.rs  iocs.rs  mod.rs  projects.rs  rows.rs  utils.rs
src/lib/: backend.ts  theme.ts  types.ts
src/lib/components/: ProjectView.svelte  project-view.css
src/lib/components/app/: Header.svelte  Sidebar.svelte  Toast.svelte
src/lib/components/project_view/: DataTable.svelte  ExpandedCellDialog.svelte  FilterControls.svelte  FlagSelect.svelte  IocManagerDialog.svelte  MemoEditorDialog.svelte  state.ts
src/lib/stores/: projects.ts
src/lib/utils/: toast.ts
